--- a/app/src/main/res/layout/activity_registrar_class.xml
+++ b/app/src/main/res/layout/activity_registrar_class.xml
@@ -47,8 +47,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="84dp"
             android:ems="10"
+            android:hint="Name"
             android:inputType="textPersonName"
-            android:text="Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.527"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,8 +60,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:ems="10"
+            android:hint="Identificación"
             android:inputType="textPersonName"
-            android:text="Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.527"
             app:layout_constraintStart_toStartOf="parent"
